@@ -1,7 +1,7 @@
 """
 Gentoo Linux Installer
 
-$Id: GLIArchitectureTemplate.py,v 1.87 2005/04/03 08:56:05 codeman Exp $
+$Id: GLIArchitectureTemplate.py,v 1.88 2005/04/04 01:36:22 agaffney Exp $
 Copyright 2004 Gentoo Technologies Inc.
 
 The ArchitectureTemplate is largely meant to be an abstract class and an 
@@ -366,7 +366,8 @@ class ArchitectureTemplate:
 				mountpoint = parts[device][partition]['mountpoint']
 				minor = str(parts[device][partition]['minor'])
 				partition_type = parts[device][partition]['type']
-				mountopts = parts[device][partition]['mountopts'] or "defaults"
+				mountopts = parts[device][partition]['mountopts']
+				if not mountopts.strip(): mountopts = "defaults"
 				if mountpoint:
 					if not GLIUtility.is_file(self._chroot_dir+mountpoint):
 						exitstatus = GLIUtility.spawn("mkdir -p " + self._chroot_dir + mountpoint)
