@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.127 2005/04/03 08:56:05 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.128 2005/04/04 01:36:22 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  3 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Changed mountopts check to work for blank and whitespace
 
   2 Apr 2005; Preston Cody <codeman@gentoo.org>
   fixed the way set_timezone works.  added hotplug/coldplug for livecd-kernel
